added instructions for checking a single module's well-formedness

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.20 2002/09/30 12:57:43 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.21 2002/10/01 18:50:22 joshualubell Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -43,7 +43,11 @@ checks XSLT stylesheet files for well-formedness
 checks resource XML files for well-formedness
 
 "ant wf_modules"
-checks module XML files for well-formedness
+checks XML files of all modules for well-formedness (this take several
+minutes)
+
+"ant -DMODULESDIR=data/modules/[module-name] wf_modules"
+checks a module's XML files for well-formedness
 
 "ant wf_aps"
 checks AP XML files for well-formedness
