Added comments about XSL parsers and ANT memory

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.21 2002/10/01 18:50:22 joshualubell Exp $ -->
+<!-- $Id: build.xml,v 1.22 2002/10/23 20:20:50 joshualubell Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -18,6 +18,17 @@
 <!-- ================================================= -->
 
 <!--
+============================================================
+  NOTE - The XSL for navigation uses a number of XSL parser 
+         specific extensiions, (node-set), hence only the 
+         MSXML and Saxon are supported.
+
+         Ant/Java may well run out of memory when running 
+         "ant all" To avoid this set the system environment 
+         variable  ANT_OPTS to '-Xmx256m'
+         This will increase Java heap size.
+
+============================================================
 
 Usage:
 
