added nav folder to zip

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.22 2002/10/23 20:20:50 joshualubell Exp $ -->
+<!-- $Id: build.xml,v 1.23 2002/10/25 16:20:57 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -915,7 +915,7 @@ stepmod/data/**, stepmod/help/**, stepmod/images/**"
   <target name="zip" depends="all" description="create .zip file">
     <zip zipfile="../${ARCHIVE}.zip" basedir=".."
          includes="stepmod/repository_index.htm, stepmod/css/**,
-stepmod/data/**, stepmod/help/**, stepmod/images/**, stepmod/ballots/**"
+                   stepmod/data/**, stepmod/help/**, stepmod/images/**, stepmod/ballots/**, stepmod/nav/**"
       excludes="**/*.xml, **/*.zip"
     />
   </target>
