Now builds arm_long_form.xml

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.23 2002/10/25 16:20:57 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.24 2002/11/22 14:17:21 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -282,6 +282,7 @@ tar.gz format)
     </style>
   </target>
 
+
   <target name="modules" depends="init" 
           description="generate modules">
     <dependset>
@@ -290,6 +291,22 @@ tar.gz format)
       <srcfileset dir="${STYLES}" includes="**/*.xsl"/>
       <targetfileset dir="." includes="${MODULES}/*.htm*"/>
     </dependset>
+
+
+    <style includes="${MODNAV}/arm_descriptions.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/arm_descriptions.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${MODNAV}/arm_long_form.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/arm_long_form.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+    
     <style includes="${MODNAV}/developer.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/developer.xsl">
@@ -297,16 +314,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
-    <style includes="${MODNAV}/summary.xml" destdir="."
+    <style includes="${MODNAV}/mapping_view.xml" destdir="."
 	   extension=".htm"
-	   style="${NAVXSL}/summary.xsl">
-      <param name="output_type" expression="HTM"/>
-      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
-    </style>
-
-    <style includes="${MODNAV}/arm_descriptions.xml" destdir="."
-	   extension=".htm"
-	   style="${NAVXSL}/arm_descriptions.xsl">
+	   style="${NAVXSL}/mapping_view.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
@@ -318,9 +328,16 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
-    <style includes="${MODDVLP}/projmg.xml" destdir="."
+    <style includes="${MODNAV}/select_view.xml" destdir="."
 	   extension=".htm"
-	   style="${DVLPXSL}/projmg.xsl">
+	   style="${NAVXSL}/select_view.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${MODNAV}/summary.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/summary.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
@@ -328,6 +345,13 @@ tar.gz format)
     <style includes="${MODDVLP}/issues.xml" destdir="."
 	   extension=".htm"
 	   style="${DVLPXSL}/issues_file.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${MODDVLP}/projmg.xml" destdir="."
+	   extension=".htm"
+	   style="${DVLPXSL}/projmg.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
