Added build for resource_part_alpha.xml

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.24 2002/11/22 14:17:21 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.25 2002/11/26 09:51:03 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -701,6 +701,15 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <!-- resource parts menu -->
+    <style includes="${NAV}/resource_part_alpha.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/resource_part_alpha.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
 
     <!-- Common resources menu -->
     <style includes="${NAV}/resource_schema_alpha.xml" destdir="."
