added mapping target

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.25 2002/11/26 09:51:03 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.26 2002/12/02 16:20:14 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -282,6 +282,24 @@ tar.gz format)
     </style>
   </target>
 
+
+  <target name="mapping" depends="init" 
+          description="perform mapping test on modules">
+    <dependset>
+
+      <srcfileset dir="${DTDDIR}" includes="**/*.dtd, **/*.ent"/>
+      <srcfileset dir="${STYLES}" includes="**/*.xsl"/>
+      <targetfileset dir="." includes="${MODULES}/*.htm*"/>
+    </dependset>
+
+    <style includes="${MODNAV}/mapping_view_with_test.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/mapping_view_with_test.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+  </target>
 
   <target name="modules" depends="init" 
           description="generate modules">
