NOw builds ballot_cvs_tags.xml

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.27 2002/12/10 10:47:55 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.28 2002/12/20 20:15:51 thendrix Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -308,7 +308,6 @@ tar.gz format)
   <target name="mapping" depends="init" 
           description="perform mapping test on modules">
     <dependset>
-
       <srcfileset dir="${DTDDIR}" includes="**/*.dtd, **/*.ent"/>
       <srcfileset dir="${STYLES}" includes="**/*.xsl"/>
       <targetfileset dir="." includes="${MODULES}/*.htm*"/>
@@ -320,8 +319,24 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
-
   </target>
+
+
+  <target name="repository_dependencies" depends="init" 
+    description="generate modules dependencies">
+    <dependset>      
+      <srcfileset dir="${DTDDIR}" includes="**/*.dtd, **/*.ent"/>
+      <srcfileset dir="${STYLES}" includes="**/*.xsl"/>
+      <targetfileset dir="." includes="${MODULES}/*.htm*"/>
+    </dependset>
+    <style includes="${NAV}/repository_dependencies.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/repository_dependencies.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+  </target>
+
 
   <target name="modules" depends="init" 
           description="generate modules">
@@ -350,6 +365,13 @@ tar.gz format)
     <style includes="${MODNAV}/developer.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/developer.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${MODNAV}/issues_dvlp.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/issues_dvlp.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
@@ -610,6 +632,13 @@ tar.gz format)
       <param name="stepmodhome" expression="."/>
     </style>
 
+    <style includes="${BALLOTS}/ballot_cvs_tags.xml" 
+      destdir="." extension=".htm"
+      style="${BALLOTSTYLES}/ballot_cvs_tags.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="stepmodhome" expression="."/>
+    </style>
+
     <style includes="${BALLOTS}/start.xml" 
       destdir="." extension=".htm"
       style="${BALLOTSTYLES}/ballot_start.xsl">
@@ -618,6 +647,7 @@ tar.gz format)
     </style>
 
   </target>
+
 
   <target name="nav" depends="init" 
     description="generate navigation indices">
